public/css/views/index.css
.banner-top {
    background: url('/img/backgrounds/banner-top-bg.png') center top;
    height: 450px;
    color: #fff;
}
.banner-top .container {
    height: 100%;
    position: relative;
}
.banner-top-ninja {
    position: absolute;
    right: 0;
    bottom: -40px;
}
.banner-top-titles {
    margin-top: 92px;
}
.banner-top-title {
    font-family:'Bitter' serif;
    text-shadow: 1px 1px 1px #555;
    font-size: 3em;
}
.banner-top-subtitle {
    margin: 20px 0;
    font-size: 20px;
    font-weight: normal;
}
a.banner-top-download-button {
	display: inline-block;
    color: #fff;
    font-size: 1.4em;
    font-family:'Bitter' serif;
    text-shadow: 1px 1px 1px #555;
    background: url('/img/buttons/download.png') bottom;
    width: 292px;
    height: 61px;
    line-height: 61px;
    text-align: center;
}
a.banner-top-download-button:hover {
    background-position: top;
    text-decoration: none;
}
.banner-top-border, .banner-top-border .container {
    background: #0f96ba;
    height: 70px;
}
.banner-top-border-seperator, .banner-top-border-text {
    float: left;
    height: 50px;
    margin: 10px 0;
    line-height: 50px;
    color: #fff;
}
.banner-top-border-text a{
  margin-left: 18px;
}
.banner-top-border-seperator {
    width: 0px;
    border-right: 1px solid #36BBD3;
    margin: 10px 20px;
}
.banner-top-border{
-webkit-box-shadow: 0px 3px 5px 0px rgba(50, 50, 50, 0.75);
-moz-box-shadow:    0px 3px 5px 0px rgba(50, 50, 50, 0.75);
box-shadow:         0px 3px 5px 0px rgba(50, 50, 50, 0.75);
}
.banner-technologies {
	border: none;
}
.banner-technologies-title {
	color: #0f96ba;
	font-weight: lighter;
	margin: 30px 0 30px 0;
  display: inline-block;
}
.gettingstarted .tweet {
  float: right;
  margin-top: 45px;
  margin-right: 10px;
}
.gettingstarted .tweet a {
  text-decoration: none;
  cursor: pointer;
  color: #187C96;
  font-size: 17px;
  font-family: 'Bitter', serif;
}
.banner-technologies-subtitle {
	color: #1f1f1f;
	font-weight: 400;
}
.banner-technologies-inner-technologies {
	margin: 0;
	padding: 0;
	list-style: none;
}
.banner-technologies-inner-technologies li{
	display: inline-block;
	vertical-align: middle;
	width: 21%;
	margin-left: 4%;
}
.banner-technologies-inner-technologies li:first-child{
	margin-left: 0;
}
.banner-technologies-inner-technologies li p{
	margin-top: 5px;
	height: 150px;
}
.banner-twocolumn-start{
  background-color: #ffffff;
}
.linnofoot{
margin-left:6px;
}
/* bootsrap 2.3 missing design elements */
ul.unstyled,
ol.unstyled {
  margin-left: 0;
  margin-right: 50px;
  list-style: none;
}
#docs h3{
	font-size:16px;
}
#docs ul li a{
color:#1b1b1b;
padding: 0px 15px
}
#docs ul li a span{
  text-decoration: none;
  color:#1b1b1b;
}
nav.nav-docs{
position:fixed;
}
.infograph{
    margin-top:20px;
    float:right;
}
slider { 
  position: relative;
  display: inline-block;
  width: 100.5%;
  height: 600px;
  overflow: hidden;
}

slider input[type="radio"] {
  width: 8px;
  height: 8px;
  margin-top: 550px;
  background-color: #CBCBCB;
  border-radius: 10px;
  cursor: pointer;
  -webkit-appearance: none;
  border: none;
}
input[type="radio"]:checked {
    background-color: #0F7B9C;
    border-radius: 10px;
    border: none;
}
slider input[type="radio"]:nth-of-type(1) {
  margin-left: 380px;
}

slide1 { 
  width: 800px;
  height: 500px;
}

/* -- 2 slider:treger -- */

/*[slide-target] { width: 0; height: 0; margin: 0; }*/
[slide-target]:before,[slide-target]:after {
  position: absolute;
  top: 50%;
  z-index: 10;
  font-size: 50px;
}
[slide-target]:before { content: '<'; left: 0; right: auto;  }
[slide-target]:after  { content: '>'; left: auto;    right:0;  }

/* -- 3 slider:click -- */

slide1 { display: none; }

/* Loop: last next */
[slide-target] ~ [slide-target]:after { display: none; }

/* Loop: first pevr */
[slide-target] ~ [slide-target]:checked ~ [slide-target]:before { display: none; }

/* display */
[slide-target]:checked + slide1,
[slide-target]:checked ~ [slide-target]:after {
  display: block;
}
[slide-target]:checked:after,
[slide-target]:checked:before,
[slide-target]:checked ~ [slide-target] ~ [slide-target]:after { 
  display: none; 
}

/* -- slide -- */

[slide-target] { cursor: pointer; }
[slide-target]:before,[slide-target]:after {
  background: #1096BB;
  padding: 0 7px;
  font-size: 40px;
  color: white;
  -webkit-transition: -webkit-transform 100ms;
}
[slide-target]:active:before,
[slide-target]:active:after,
[slide-target]:hover:before,
[slide-target]:hover:after{
  opacity: 1
}
[slide-target]:after{
  right: -5px;
}
[slide-target]:before {
  left: -5px;
}
slide1 {
position: absolute;
left: -100%;
top: 0;
display: block;
-webkit-transition: all .7s;
}

[slide-target]:checked ~ slide1 {
  left: 100%;
  pointer-events: none;
}
[slide-target]:checked + slide1 {
  left:0;
  z-index: 5;
}

